--- a/www/app/index.html
+++ b/www/app/index.html
@@ -16,18 +16,12 @@
     <meta name="theme-color" content="#ffffff">
 
     {{content-for "head"}}
-
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/website.css">
-
+    {{content-for "concat-css"}}
     {{content-for "head-footer"}}
   </head>
   <body>
     {{content-for "body"}}
-
-    <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/website.js"></script>
-
+    {{content-for "concat-js"}}
     {{content-for "body-footer"}}
   </body>
 </html>
